--- a/app/src/main/res/layout/news_items.xml
+++ b/app/src/main/res/layout/news_items.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="8dp"
+    app:cardElevation="100dp"
+    android:layout_margin="5dp"
     android:id="@+id/card_view">
 
 
